[metadata]
name = graph-orchestrator
version = 0.0.1.dev25052
author = Abhinav Sharma
author_email = abhiji99@gmail.com
description = A lightweight graph execution engine.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AbhinavS99/GraphFlow
license = BSD-2-Clause
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries

[options]
packages = find:
python_requires = >=3.12
install_requires = 
    matplotlib
    fastapi
    uvicorn[standard]
    pydantic
    httpx
    click

[options.entry_points]
console_scripts =
    toolset-server = graphorchestrator.toolsetserver.__main__:cli

[options.extras_require]
dev =
    pytest
    pytest-asyncio
    coverage
    build
    twine
